--- a/server/package.json
+++ b/server/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-    "scripts": {
-      "build": "npx tsc",
-      "start": "node dist/index.js",
-      "dev": "nodemon src/index.ts"
-    },
+  "scripts": {
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "@typegoose/typegoose": "^12.1.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
