--- a/Front/package.json
+++ b/Front/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "mongoose": "^8.2.0",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
@@ -31,15 +32,22 @@
   },
   "devDependencies": {
     "@quasar/app-webpack": "^3.12.3",
-    "@types/node": "^12.20.21",
+    "@tsconfig/node20": "^20.1.2",
+    "@typegoose/typegoose": "^12.2.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^12.20.55",
     "@types/user-agents": "^1.0.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
+    "express-oauth2-jwt-bearer": "^1.6.0",
     "prettier": "^2.5.1",
     "puppeteer": "^22.2.0",
+    "reflect-metadata": "^0.2.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.3",
     "user-agents": "^1.1.125"
   },
   "browserslist": [
