--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.3.3",
+    "@google-translate-select/vue3": "^0.1.6",
     "@quasar/extras": "^1.0.0",
     "axios": "^1.2.1",
     "core-js": "^3.6.5",
@@ -24,6 +25,7 @@
     "express": "^4.18.2",
     "helmet": "^7.1.0",
     "mongoose": "^8.2.0",
+    "papaparse": "^5.4.1",
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
